# ssp

./: Makefile  README.md  package.json
.agent/workflows/: use-bun.md
backend/: .example.env  company_search.py  main.py  pdf_ingest.py  pyproject.toml  social_signals.py  text_chunking.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/app/[viewId]/: page.js
frontend/src/app/api/views/: route.js
frontend/src/components/: ExportPDFButton.jsx  LeftRail.jsx  TopBar.jsx
frontend/src/utils/: storage.js
src/app/: globals.css  layout.js
src/app/[viewId]/: page.js
src/components/: AppShell.jsx  CoverageBar.jsx  Editor.jsx  LeftRail.jsx  PDFViewer.jsx  TopBar.jsx
src/config/: artifacts.js
src/context/: DocumentContext.jsx  ThemeContext.jsx
src/utils/: storage.js
